Bug 25072: Fix details.tt print CSS
TO TEST:
-Search for something in the catalog and go to the details page.
-Try to print either for the Print button in Koha or File->Print...
-Notice the large amount of whitespace on the left
-Apply patch
-Reload detaials page and attempt to print again.
-No whitespace on left side

--- a/koha-tmpl/intranet-tmpl/prog/css/print.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/print.css
@@ -305,6 +305,7 @@ fieldset.action,
 .list-actions,
 .print,
 .ui-tabs-nav,
+.browse-controls,
 .cart-controls {
     display: none;
 }
@@ -358,4 +359,8 @@ th {
 
 .container {
     width:100%;
+}
+
+#catalog_detail .col-sm-push-2 {
+    left: 0;
 }
